# cat-farm

./: .clang-tidy  .gitignore  ABOUT.md  CMakeLists.txt  CONTRIBUTE.md  README.md  STATISTICS.md  WEEKLY_PROGRESS.md
data/: catColors.txt  dogColors.txt
generated_docs/html/: Animal_8cpp.html  Animal_8cpp__incl.map  Animal_8cpp__incl.md5  Animal_8cpp_source.html  Animal_8h.html  Animal_8h__dep__incl.map  Animal_8h__dep__incl.md5  Animal_8h__incl.map  Animal_8h__incl.md5  Animal_8h_source.html  ArrayDB_8cpp.html  ArrayDB_8cpp.js  ArrayDB_8cpp__incl.map  ArrayDB_8cpp__incl.md5  ArrayDB_8cpp_ab9f92cfb73b3e157fe2cba3a7769c93e_icgraph.md5  ArrayDB_8cpp_af818deeeeb8f57be5bd7a4a6d95b5a34_cgraph.md5  ArrayDB_8cpp_af818deeeeb8f57be5bd7a4a6d95b5a34_icgraph.map  ArrayDB_8cpp_source.html  ArrayDB_8h.html  ArrayDB_8h.js  ArrayDB_8h__dep__incl.map  ArrayDB_8h__dep__incl.md5  ArrayDB_8h_a3cc5529977915144909a162715ba1274_cgraph.map  ArrayDB_8h_a3cc5529977915144909a162715ba1274_cgraph.md5  ArrayDB_8h_ab9f92cfb73b3e157fe2cba3a7769c93e_icgraph.map  ArrayDB_8h_af818deeeeb8f57be5bd7a4a6d95b5a34_cgraph.map  ArrayDB_8h_af818deeeeb8f57be5bd7a4a6d95b5a34_icgraph.md5  ArrayDB_8h_source.html  Cat_8cpp.html  Cat_8cpp.js  Cat_8cpp__incl.map  Cat_8cpp__incl.md5  Cat_8cpp_a3daa0851aa17e2fa26c14060bb7ab259_icgraph.md5  Cat_8cpp_a495595bb258b9cd1419d36e4e712fb14_cgraph.md5  Cat_8cpp_source.html  Cat_8h.html  Cat_8h.js  Cat_8h__dep__incl.map  Cat_8h__dep__incl.md5  Cat_8h_a3daa0851aa17e2fa26c14060bb7ab259_icgraph.map  (+550 more)
generated_docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  files_0.js  files_1.js  files_2.js  (+35 more)
src/: config.h  main.cpp  main_catEmpire.cpp
src/Animal/: Animal.cpp  Animal.h
src/Container/: Container.h  Node.h  SingleLinkedList.cpp  SingleLinkedList.h
src/Legacy/: ArrayDB.cpp  ArrayDB.h  Cat.cpp  Cat.h  epicCats.cpp
src/Mammal/: Mammal.cpp  Mammal.h
src/Mammal/Cat/: Cat.cpp  Cat.h
src/Utility/: Gender.cpp  Gender.h  Name.cpp  Name.h  Trim.cpp  Trim.h
tests/: .clang-tidy  CMakeLists.txt  test_Animal.cpp  test_Cat.cpp  test_Gender.cpp  test_Legacy_ArrayDB.cpp  test_Legacy_Cat.cpp  test_Mammal.cpp  test_Name.cpp  test_SingleLinkedList.cpp  test_Trim.cpp
